@@ -15,6 +15,11 @@ use Joomla\CMS\Router\Route;
 
 /** @var \Akeeba\Component\ContactUs\Administrator\View\Items\HtmlView $this */
 
+if (version_compare(JVERSION, '4.999.999', 'lt'))
+{
+	$this->loadAnyTemplate('Commontemplates/joomla_eol');
+}
+
 HTMLHelper::_('behavior.multiselect');
 
 $user      = Factory::getApplication()->getIdentity() ?: Factory::getUser();
